app1/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    asdf: qwer
  name: app1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/iankwatts-tools/helloworld:latest
          imagePullPolicy: Always
          name: app1
          ports:
            - containerPort: 9999
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
