app1/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    asdf: qwer
    qwer: asdf
    testing: ${clustername}
  name: app1
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9999
  selector:
    app: app1
  sessionAffinity: None
  type: ClusterIP
