app1/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: {}
  labels:
    asdf: qwer
  name: app1
spec:
  host: app1-iankwatts-dev.apps.klab.devops.gov.bc.ca
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: app1
    weight: 100
  wildcardPolicy: None
